--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,43 +16,69 @@
         android:textColor="@android:color/white"
         android:text="BatMan Vs SuperMan"/>
 
-    <TextView
-        android:id="@+id/movie_release_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        android:padding="16dp"
-        android:layout_below="@id/movie_title"
-        android:background="@android:color/holo_red_dark"/>
-
-    <RatingBar
-        android:id="@+id/movie_rating"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numStars="10"
-        android:stepSize="1"
-        android:clickable="false"
-        android:focusableInTouchMode="false"
-        android:focusable="false"
-        android:isIndicator="true"
-        style="?android:attr/ratingBarStyleSmall"
-        android:progressTint="#FFB500"
-        android:secondaryProgressTint="@android:color/white"
-        android:layout_below="@id/movie_title"
-        android:layout_toRightOf="@id/movie_release_date"
-        android:layout_margin="16dp"/>
-
     <ImageView
         android:id="@+id/movie_thumbnail"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:layout_margin="24dp"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/movie_release_date"/>
+        android:layout_below="@id/movie_title"/>
+
+    <TextView
+        android:id="@+id/text_release_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/release_date"
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/movie_title"
+        android:layout_toRightOf="@id/movie_thumbnail" />
+
+    <TextView
+        android:id="@+id/movie_release_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:padding="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_below="@id/text_release_date"
+        android:layout_toRightOf="@id/movie_thumbnail"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/movie_thumbnail"
+        android:padding="16dp"
+        android:background="@android:color/holo_red_dark">
+
+        <TextView
+            android:id="@+id/text_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rating"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_marginRight="8dp"/>
+
+        <RatingBar
+            android:id="@+id/movie_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="10"
+            android:stepSize="1"
+            android:clickable="false"
+            android:focusableInTouchMode="false"
+            android:focusable="false"
+            android:isIndicator="true"
+            style="?android:attr/ratingBarStyleSmall"
+            android:progressTint="#FFB500"
+            android:secondaryProgressTint="@android:color/white" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/movie_description"
@@ -60,6 +86,6 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:textColor="@android:color/white"
-        android:layout_below="@id/movie_release_date" />
+        android:layout_below="@id/movie_thumbnail" />
 
 </RelativeLayout>
