--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,15 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/settings" android:title="@string/action_setting"
-        app:showAsAction="always"/>
-
-    <item android:id="@+id/sort_by_most_popular"
-        android:title="@string/sort_by_most_popular"
-        app:showAsAction="never"/>
-
-    <item android:id="@+id/sort_by_top_rated"
-        android:title="@string/sort_by_top_rated"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="always" android:icon="@drawable/ic_settings_white_24dp"/>
 
 </menu>
