refactored code replaced okhttp with retrofit and gridview with recyclerView

--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -3,19 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
-    tools:context=".MainActivity$MovieFragment">
+    tools:context=".activity.MainActivity$MovieFragment">
 
-    <GridView
-        android:id="@+id/grid_for_posters"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:verticalSpacing="8dp"
-        android:horizontalSpacing="8dp"
-        android:columnWidth="148dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"
-        android:numColumns="auto_fit"
-        android:useDefaultMargins="true"/>
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
