--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movie_poster"
-    android:layout_width="164dp"
-    android:layout_height="164dp"
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
     android:focusableInTouchMode="false"
     android:clickable="false"
     android:focusable="false"
-    android:background="?attr/selectableItemBackgroundBorderless"
-    android:scaleType="centerCrop">
+    android:scaleType="centerCrop"
+    android:background="?attr/selectableItemBackgroundBorderless">
 </ImageView>
