--- a/app/src/main/res/layout/detail_content.xml
+++ b/app/src/main/res/layout/detail_content.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.android.popularmovies.activity.DetailActivity"
+    tools:context="com.example.android.popularmovies.fragment.DetailFragment"
     tools:showIn="@layout/activity_detail">
 
     <RelativeLayout
