--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -56,7 +56,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/movie_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:context="com.example.android.popularmovies.activity.DetailActivity"
         tools:ignore="MergeRootFrame"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
